 - Updated CCCwork.txt to the new scheme.
 - Fixed a bug with OPTION element (it was parsing entities twice).
 - Bugfix: remove the empty cache entry lingering after connection abort.
 - Switched capi to use dlib's Dlist instead of a_List_* methods.
 - Remove empty cache entries on Stop-button press and new link request!
 - Fixed URL unescaping in the datauri DPI.
   Patches: Jorge Arellano Cid
+- Fix segfault from AREA when MAP is missing name attribute.
 - Fix image map coordinates when margin/border/padding present.
 - Handle stylesheet @charset.
 - Fix cache segfault when cache entry removed.
 - Split words that contain whitespace as numeric character references.
 - Allow linebreaks around Chinese/Japanese characters.
 - Fix segfault in Html_parse_doctype (BUG#918).
 - Change exit code used for bad command line argument.
 - By default, do not use proxy for localhost (BUG 921).
 - Fix scrolling for text search.
 - Added 'save' key action (not bound by default).
 - Tooltips
 - Fix segfault when radio button lacks name attribute.
 - Enable popup menu below bottom of page content (BUG#856).
   Patches: corvid
+- Support for the letter-spacing property.
   Patch: Johannes Hofmann, corvid

-----------------------------------------------------------------------------

dillo-2.1.1 [Jul 3, 2009]

+- Add additional size checks for images.
   Patch: Jorge Arellano Cid, Johannes Hofmann, corvid
+- Fixed a bug in parsing RGB color values (CSS).
 - Added support for css colors of the form rgb(255, 255, 255).
 - Assert that SimpleVector size is positive.
   Patches: Johannes Hofmann
+- Removed redundant system includes.
 - Added the "nop" keybinding (nop = NO_OPERATION; cancels a default hook).
 - Added 'stop' key action (not bound by default).
 - Fixed segfault when URL is NULL and dpis can't be found.
   Patches: place (AKA corvid)
+- Reduced 'warning: ignoring return value of ...'
   Patch: Michal Nowak, Jorge Arellano Cid
+- Check chdir() return code in Paths::init.